--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -1,1 +1,3 @@
-<H1>Hello world</H1>
+<! --  Index let, var, const  ––> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/embed/"></script>
+
+<! --  Index objectes  ––> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/2/embed/"></script>
