--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -1,3 +1,14 @@
-<! --  Index let, var, const  ––> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/embed/"></script>
-
-<! --  Index objectes  ––> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/2/embed/"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+    <!-- Index let, var, const --> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/4/embed/"></script>
+    <!-- Index objectes --> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/3/embed/"></script>
+</head>
+<body>
+    
+</body>
+</html>
