--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <H2>Variables simples</H2>
     <!-- Index let, var, const --> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/4/embed/"></script>
+    <H2>Variables complexes</H2>
     <!-- Index objectes --> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/3/embed/"></script>
 </head>
 <body>
