--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -10,6 +10,18 @@
     <!-- Index let, var, const --> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/4/embed/"></script>
     <H2>Variables complexes</H2>
     <!-- Index objectes --> <script async src="//jsfiddle.net/dabeal02/8vrk0mhb/3/embed/"></script>
+    <H2>Exemple window.alert()</H2>
+    <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/2/embed/"></script>
+    <H2>Exemple window.prompt()</H2>
+    <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/17/embed/"></script>
+    <H2>Exemple window.confirm()</H2>
+    <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/17/embed/"></script>
+    <H2>Exemple console.log()</H2>
+    <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/19/embed/"></script>
+    <H2>Exemple 1 validacio programatica</H2>
+    <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/52/embed/"></script>
+    <H2>Exemple 2 validacio programatica</H2>
+    <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/55/embed/"></script>
 </head>
 <body>
     
