Afagit validació formulari

--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -22,6 +22,8 @@
     <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/52/embed/"></script>
     <H2>Exemple 2 validacio programatica</H2>
     <script async src="//jsfiddle.net/dabeal02/yjsr0Lhm/55/embed/"></script>
+    <H2>Validació formulari</H2>
+    <script async src="//jsfiddle.net/dabeal02/an1Lps0u/embed/"></script>
     <H2>Exemples estructures condicionals i de repetició</H2>
     <script async src="//jsfiddle.net/dabeal02/0avdm58n/embed/"></script>
 </head>
