--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -26,6 +26,12 @@
     <script async src="//jsfiddle.net/dabeal02/an1Lps0u/embed/"></script>
     <H2>Exemples estructures condicionals i de repetició</H2>
     <script async src="//jsfiddle.net/dabeal02/0avdm58n/embed/"></script>
+    <H2>Mètodes objectes (NUMÈRICS)</H2>
+    Substituir per codi
+    <H2>Mètodes objectes (STRINGS)</H2>
+    Substituir per codi
+    <H2>Mètodes objectes (ARRAYS)</H2>
+    Substituir per codi
 </head>
 <body>
     
