--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -27,10 +27,12 @@
     <H2>Exemples estructures condicionals i de repetició</H2>
     <script async src="//jsfiddle.net/dabeal02/0avdm58n/embed/"></script>
     <H2>Mètodes objectes (NUMÈRICS)</H2>
-    Substituir per codi
+    <script async src="//jsfiddle.net/dabeal02/4qo0huf3/4/embed/"></script>
     <H2>Mètodes objectes (STRINGS)</H2>
     Substituir per codi
     <H2>Mètodes objectes (ARRAYS)</H2>
+    Substituir per codi
+    <H2>Mètode sort fent una ordenació personalitzada</H2>
     Substituir per codi
 </head>
 <body>
