Afagit els exemples de les funcions dels arrays

--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -31,7 +31,7 @@
     <H2>Mètodes objectes (STRINGS)</H2>
     <script async src="//jsfiddle.net/dabeal02/13wc8sg2/22/embed/"></script>
     <H2>Mètodes objectes (ARRAYS)</H2>
-    Substituir per codi
+    <script async src="//jsfiddle.net/dabeal02/13wc8sg2/74/embed/"></script>
     <H2>Mètode sort fent una ordenació personalitzada</H2>
     Substituir per codi
 </head>
