--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -32,6 +32,8 @@
     <script async src="//jsfiddle.net/dabeal02/13wc8sg2/22/embed/"></script>
     <H2>Mètodes objectes (ARRAYS)</H2>
     <script async src="//jsfiddle.net/dabeal02/13wc8sg2/74/embed/"></script>
+    <H2>Mètodes objectes (DATES)</H2>
+    <script async src="//jsfiddle.net/dabeal02/wckahdse/31/embed/"></script>
     <H2>Mètode sort fent una ordenació personalitzada</H2>
     Substituir per codi
 </head>
