Afagit el mètode sort() per objectes

--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -35,7 +35,7 @@
     <H2>Mètodes objectes (DATES)</H2>
     <script async src="//jsfiddle.net/dabeal02/wckahdse/31/embed/"></script>
     <H2>Mètode sort fent una ordenació personalitzada</H2>
-    Substituir per codi
+    <script async src="//jsfiddle.net/dabeal02/ta1mjqdy/136/embed/"></script>
 </head>
 <body>
     
