Afagit dos exercicis de cookies

--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -36,6 +36,12 @@
     <script async src="//jsfiddle.net/dabeal02/wckahdse/31/embed/"></script>
     <H2>Mètode sort fent una ordenació personalitzada</H2>
     <script async src="//jsfiddle.net/dabeal02/ta1mjqdy/136/embed/"></script>
+    <H2>Crear cookie</H2>
+    <script async src="//jsfiddle.net/dabeal02/cho9xk28/7/embed/"></script>
+    <H2>Recuperar cookie</H2>
+
+    <H2>Llistar cookies i mostrar</H2>
+    <script async src="//jsfiddle.net/dabeal02/cho9xk28/16/embed/"></script>
 </head>
 <body>
     
