--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -40,6 +40,8 @@
     <script async src="//jsfiddle.net/dabeal02/zjgp7xLn/40/embed/"></script>
     <H2>Recuperar cookie</H2>
 
+    <H2>Eliminar cookie</H2>
+    
     <H2>Llistar cookies i mostrar</H2>
     <script async src="//jsfiddle.net/dabeal02/cho9xk28/16/embed/"></script>
 </head>
