--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -39,9 +39,9 @@
     <H2>Crear cookie</H2>
     <script async src="//jsfiddle.net/dabeal02/zjgp7xLn/40/embed/"></script>
     <H2>Recuperar cookie</H2>
-
+    <script async src="//jsfiddle.net/dabeal02/od7mq2sL/101/embed/"></script>
     <H2>Eliminar cookie</H2>
-    
+    <script async src="//jsfiddle.net/dabeal02/od7mq2sL/97/embed/"></script>
     <H2>Llistar cookies i mostrar</H2>
     <script async src="//jsfiddle.net/dabeal02/zjgp7xLn/46/embed/"></script>
 </head>
