--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -44,6 +44,12 @@
     <script async src="//jsfiddle.net/dabeal02/od7mq2sL/97/embed/"></script>
     <H2>Llistar cookies i mostrar</H2>
     <script async src="//jsfiddle.net/dabeal02/zjgp7xLn/46/embed/"></script>
+    <H2>Exemple d'ús de callbacks i callback anònim</H2>
+    <script async src="//jsfiddle.net/dabeal02/8mty2w3p/6/embed/"></script>
+    <H2>Exemple callback contador</H2>
+    <script async src="//jsfiddle.net/dabeal02/8mty2w3p/3/embed/"></script>
+    <H2>Callbacks amb paràmetres</H2>
+    <script async src="//jsfiddle.net/dabeal02/8mty2w3p/embed/"></script>
 </head>
 <body>
     
