--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -50,6 +50,14 @@
     <script async src="//jsfiddle.net/dabeal02/8mty2w3p/3/embed/"></script>
     <H2>Callbacks amb paràmetres</H2>
     <script async src="//jsfiddle.net/dabeal02/8mty2w3p/embed/"></script>
+    <H2>Exemple molt bàsic selectors</H2>
+    <script async src="//jsfiddle.net/dabeal02/6m3ujtqf/159/embed/"></script>
+    <H2>Arbre elements DOM</H2>
+    <script async src="//jsfiddle.net/dabeal02/kax526v8/embed/"></script>
+    <H2>Exemples datasets</H2>
+    <script async src="//jsfiddle.net/dabeal02/kax526v8/137/embed/"></script>
+    <H2>Pràctica elements DOM</H2>
+    <script async src="//jsfiddle.net/dabeal02/fr27nue3/1/embed/"></script>
 </head>
 <body>
     
