--- a/Quadern_JS/index.html
+++ b/Quadern_JS/index.html
@@ -58,6 +58,8 @@
     <script async src="//jsfiddle.net/dabeal02/kax526v8/137/embed/"></script>
     <H2>Pràctica elements DOM</H2>
     <script async src="//jsfiddle.net/dabeal02/fr27nue3/1/embed/"></script>
+    <H2>Reacció a esdeveniments</H2>
+    <script async src="//jsfiddle.net/dabeal02/L0ct1mvz/embed/"></script>
 </head>
 <body>
     
