--- a/index.html
+++ b/index.html
@@ -1,7 +1,220 @@
 <!DOCTYPE html>
-    <html>
-        <body>
-            <h1>Hello World</h1>
-            <p>I'm hosted with GitHub Pages.</p>
-        </body>
-    </html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./fotos/logo.svg">
+    <title>Portafoli</title>
+    <!-- Con estas lineas de código implementamos bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="portafoli.css" /> <!-- Etiqueta per linkar el css. -->
+    <!-- Las siguiente linias de código son para poder aplicar nuestra fuente -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Fonts portafolis -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Copse&family=Rubik&family=Ubuntu&display=swap" rel="stylesheet">
+a
+   
+</head>
+
+<body>
+            <!-- Aquí pondremos el logo -->
+            <div class = "col-1">
+                <img src="./fotos/logo.svg" alt="Mi logo" width="100px" height="100px" class = "mx-5">
+            </div>
+
+        <!-- Primer apartado (¿Quién soy?) -->
+        <div class = "container">
+            <div class = "row"> 
+                <div class = "col-2">
+                    <div class = "col-1">
+                        <!-- Aquí pondremos el menú -->
+                    </div>
+                </div>
+
+                <div class = "col-5">
+                    <h1 class = "titulos">David<br> Béjar<br> Albert</h1>
+                </div>
+
+                <div class = "col-5">
+                    <!-- Aquí insertaremos el vídeo interactivo -->
+                </div>
+            </div>
+        </div>
+
+        <hr class="w-40 clearfix d-md" style="color: #24479A; margin-top: 100px; margin-bottom: 100px;"/> <!-- Ponemos una línia de separación -->
+
+        <!-- Segundo apartado SKILLS -->
+        <div class = "container">
+            <div class = "row"> 
+                
+                <div class = "col-3">
+                    <h2 class = "subtitulos">Soft skills</h2>
+                </div>
+
+                <div class = "col-9 divSkill">
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">inteligència emocional</h3>
+                        <img src="fotos/soft skills/cerebro.png" alt="Cervell" width="100px" height="100px">
+                    </div>
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">Pensament objectiu</h3>
+                        <img src="fotos/soft skills/engranajes.png" alt="Engranatges" width="100px" height="100px">
+                    </div>
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">Poder adaptatiu</h3>
+                        <img src="fotos/soft skills/camaleon.png" alt="Camaleó" width="100px" height="100px">
+                    </div>
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">Treball en equip</h3>
+                        <img src="fotos/soft skills/peón.png" alt="Peó" width="100px" height="100px">
+                    </div>
+                </div>
+            </div>
+
+            <div class = "row" style="margin-top: 300px;"> 
+                
+                <div class = "col-3">
+                    <h2 class = "subtitulos" >Hard skills</h2>
+                </div>
+
+                <div class = "col-9 divSkill">
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">HTML</h3>
+                        <img src="fotos/hard skills/HTML.png" alt="HTML" width="100px" height="100px" style="margin-top: 20px;">
+                    </div>
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">Java Script</h3>
+                        <img src="fotos/hard skills/JavaScript-logo.png" alt="Java Script" width="100px" height="100px" style="margin-top: 20px;">
+                    </div>
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">PHP</h3>
+                        <img src="fotos/hard skills/PHP.png" alt="PHP" width="130px" height="70px" style="margin-top: 30px;">
+                    </div>
+                    <div class = "container text-center contenidorSkill"> <!-- Contenedor de skill -->
+                        <h3 class = "tituloSkill">Laravel</h3>
+                        <img src="fotos/hard skills/laravel.png" alt="Laravel" width="100px" height="100px" style="margin-top: 20px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr class="w-40 clearfix d-md" style="color: #24479A; margin-top: 100px; margin-bottom: 100px;"/> <!-- Ponemos una línia de separación -->
+
+        <!-- Tercer apartado ABP -->
+        <div class = "container">
+            <div class = "row">
+                    <h1 class = "titulos">ABP</h1>
+                    <h2 style="font-family: 'Cabin', sans-serif; font-size: 40px; color: #FFFFFF;"><u>Aprenentatge basat en projectes</u></h2>
+            </div>
+            <div class = "row" style="margin-top: 120px;">
+                <div class = "col">
+                    <img src="fotos/ABP/grafico1.JPG" alt="Foto del primer gràfic" width="400px" height="240px">
+                </div>
+                <div class = "col">
+                    <img src="fotos/ABP/grafico2.JPG" alt="Foto del segon gràfic" width="400px" height="260px">
+                </div>
+                <div class = "col">
+                    <img src="fotos/ABP/grafico3.JPG" alt="Foto del tercer gràfic" width="400px" height="240px">
+                </div>
+            </div>
+            <div class = "row text-center" style="margin-top: 110px;">
+                <div class = "col">
+                    <h3 class = "mt-5" style="color: #FFFFFF; font-family: 'Copse', serif; font-size: 30px;">Aquests són alguns dels apartats dels projectes que hem pogut traballar al llarg del segon curs</h3>
+                </div>
+                <div class = "col">
+                    <img src="fotos/ABP/Memory1.png" alt="Primera foto del memory" width="400px" height="240px">
+                </div>
+                <div class = "col">
+                    <img src="fotos/ABP/Memory2.png" alt="Segona foto del memory" width="400px" height="240px" style="margin-bottom: 60px;">
+                </div>
+            </div>
+            <div class = "row">
+               <div class = "col text-center">
+                <!-- Este es nuestro video de las microoponencias -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/n1tyNEHTSnU" title="YouTube video player" frameborder="0"
+                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+               </div>
+            </div>
+        </div>
+
+        <hr class="w-40 clearfix d-md" style="color: #24479A; margin-top: 100px; margin-bottom: 100px;"/> <!-- Ponemos una línia de separación -->
+
+        <!-- Cuarto apartado -->
+        <div class = "container">
+            <div class = "row">
+                <h1 class = "titulos">El manual d'identitat corporativa</h1>
+            </div>
+            <div class = "row">
+                <div class = "col text-center">
+                    <h4 id = "textoCuartoApartado">Vols veure el meu manual d'identitat corporativa? <br> Fes click a la imatge per inspeccionar-lo</h4>
+                </div>
+                <div class = "col mt-5">
+                    <a href="landing_page.html" target="_blank">
+                        <img src="./fotos/Manual de identidad corporativa/Foto_mia.jpeg" alt="Foto propia" id="fotoMia"> <!-- En esta imagen habrá que linkar el manual de identidad corporativa -->
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <hr class="w-40 clearfix d-md" style="color: #24479A; margin-top: 100px; margin-bottom: 100px;"/> <!-- Ponemos una línia de separación -->
+
+        <!-- AQUÍI FALTA PODER MOVER LOS BLOQUES PARA QUE ETEN CADA UNO EN SU SITIO -->
+        <!-- Último apartado -->
+        <div class = "container-fluid">
+            <div class = "row"> <!-- Misión -->
+                <div class = "col">
+                    <div class="contenedor1 ms-3">
+                        <img src="./fotos/MVV/trofeo.png" alt="Imagen de trofeo" width="150px" height="150px" style="margin-top: 30px;">
+                        <div>
+                            <h1 class = "titulos">Missió: </h1>
+                            <p class = "parrafos"> La meva missió es acabar sent un gran informàtic i programador </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class = "row"> 
+                <div class = "col">
+                    <div class="contenedor2 ">
+                        <img src="./fotos/MVV/objetivo.png" alt="Imagen de trofeo" width="150px" height="150px" style="margin-top: 20px; position: absolute; right: 40px;">
+                        <h1 class = "titulos text-end">Vissió:</h1>
+                        <p class = "parrafos text-end"> La vissió que tinc està força lligada amb la meva missió. Estic valorant fer 
+                            les proves específiques de la selectivitat, tal per tenir una nota de tall suficient, per poder estudiar la carrera de Ingenyeria Informàtica.
+                            La universistat per mi és un repte a afrontar i mai he tingut el plantejament d'anar-hi, però potser d'aquí a uns anys doni el pas per seguir estudiant i formant-me</p>
+                    </div>
+                </div>
+            </div>
+            <div class = "row"> 
+                <div class = "col">
+                    <div class="contenedor3 text-center">
+                        <img src="./fotos/MVV/valores.png" alt="Imagen de trofeo" width="150px" height="150px" >
+                        <div>
+                            <h1 class = "titulos">Valors:</h1>
+                            <p class = "parrafos"> Sóc una persona ambiciosa, m'agrada treballar sol i amb calma, que és de la manera en <br> que més aprenc, independentment
+                                no em resulta incòmode treballar en equip. <br> Em puc adaptar amb facilitat, tinc tendència a estressar-me i agobiar-me, <br> m'agrada la sinceritat i no tolero les mentides.
+                                Considero que diu molt d'una persona <br> el fet d'anar de cara i amb la veritat per davant</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+ <!-- Con la siguiente línia de código linkamos el script -->
+    <script src="portafoli.js"></script>
+</body>
