--- a/landing_page.html
+++ b/landing_page.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg" id = "miNavbar">
     <div class = "container-fluid" id = "home">
         <!-- La imagen con su correspndiente id -->
-        <a class="navbar-brand"><img src="./Fotos/home.png" width="100" height="100"></a>
+        <a class="navbar-brand"><img src="./fotos/home.png" width="100" height="100"></a>
     </div>
 
     <!-- Aquí introduciremos nuestros 4 apartados -->
@@ -45,7 +45,7 @@
     </div>
 
     <div class = "container-fluid text-center" id = "cntEmail">
-      <img src="./Fotos/email_good.PNG" alt="" id = "email">
+      <img src="./fotos/email_good.PNG" alt="" id = "email">
     </div>
 
   </nav>
@@ -63,7 +63,7 @@
 
               <div class = "container" id = "marcoImagen">
                 <div class = "container text-center" id="imagenMia">
-                  <img src="./Fotos/Foto_mia.jpeg" width="320" height="470" alt="Imagen mia" id = "archivoImagen">
+                  <img src="./fotos/Foto_mia.jpeg" width="320" height="470" alt="Imagen mia" id = "archivoImagen">
                 </div>
               </div>
 
@@ -71,7 +71,7 @@
             <!-- Aquí pondremos la imagen del centro -->
             <div class = "col">
               
-              <img src="./Fotos/politecnics.png" width="420" height="110" alt="Imagen mia" id = "imagenCentro">
+              <img src="./fotos/politecnics.png" width="420" height="110" alt="Imagen mia" id = "imagenCentro">
 
             </div>
           </div>
