--- a/tipografia.html
+++ b/tipografia.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg" id = "miNavbar">
     <div class = "container-fluid" id = "home">
         <!-- La imagen con su correspndiente id -->
-        <a class="navbar-brand" href="./landing_page.html"><img src="./Fotos/home.png" width="100" height="100"></a>
+        <a class="navbar-brand" href="./landing_page.html"><img src="./fotos/home.png" width="100" height="100"></a>
     </div>
 
     <!-- Aquí introduciremos nuestros 4 apartados -->
@@ -147,7 +147,7 @@
         <h1 id = "titulosInferiores" class = "text-center">Moodboard</h1>
         <div class = "row">
 
-          <img src="./Fotos/moodboard_tipografia.PNG" alt="Moodboard tipográfico">
+          <img src="./fotos/moodboard_tipografia.PNG" alt="Moodboard tipográfico">
 
         </div>  
 
