--- a/colores.html
+++ b/colores.html
@@ -29,7 +29,7 @@
   <nav class="navbar navbar-expand-lg" id="miNavbar">
     <div class="container-fluid" id="home">
       <!-- La imagen con su correspndiente id -->
-      <a class="navbar-brand" href="./landing_page.html"><img src="./Fotos/home.png" width="100" height="100"></a>
+      <a class="navbar-brand" href="./landing_page.html"><img src="./fotos/home.png" width="100" height="100"></a>
     </div>
 
     <!-- Aquí introduciremos nuestros 4 apartados -->
@@ -51,7 +51,7 @@
     </div>
 
     <div class="container-fluid text-center" id="cntEmail">
-      <img src="./Fotos/email_good.PNG" alt="" id="email">
+      <img src="./fotos/email_good.PNG" alt="" id="email">
     </div>
 
   </nav>
@@ -170,19 +170,19 @@
 
           <div class="col">
             <a href="https://docs.google.com/document/d/1mRPHET0oBq2xUJSLkRLsykRRzPUVCQPN_8_qwvMGFqU/edit?usp=sharing"
-              target="_blank" class="btn" id="boton"><img src="./Fotos/ojos.png" alt="" width="50px" height="50px"
+              target="_blank" class="btn" id="boton"><img src="./fotos/ojos.png" alt="" width="50px" height="50px"
                 id="fotoBoton"></a>
           </div>
 
           <div class="col">
             <a href="https://docs.google.com/presentation/d/10sy3lfuR_bYKNov3u2AWHAOkXpvaTk1a5ZlurCyHe7M/edit#slide=id.g13d68953977_0_7"
-              target="_blank" class="btn" id="boton"><img src="./Fotos/ojos.png" alt="" width="50px" height="50px"
+              target="_blank" class="btn" id="boton"><img src="./fotos/ojos.png" alt="" width="50px" height="50px"
                 id="fotoBoton"></a>
           </div>
 
           <div class="col">
             <a href="https://docs.google.com/document/d/15nH_ZIOa5ZSk_NHbkyK-fj-yy_w1B7KcvwYZexOhxqs/edit"
-              target="_blank" class="btn" id="boton"><img src="./Fotos/ojos.png" alt="" width="50px" height="50px"
+              target="_blank" class="btn" id="boton"><img src="./fotos/ojos.png" alt="" width="50px" height="50px"
                 id="fotoBoton"></a>
           </div>
 
@@ -207,7 +207,7 @@
 
     <div class="row">
       <div class="col">
-        <img src="./Fotos/moodboard_colores.PNG" alt="El moodboard de colores" id="moodboard">
+        <img src="./fotos/moodboard_colores.PNG" alt="El moodboard de colores" id="moodboard">
       </div>
     </div>
 
