--- a/maquetacion.html
+++ b/maquetacion.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg" id = "miNavbar">
     <div class = "container-fluid" id = "home">
         <!-- La imagen con su correspndiente id -->
-        <a class="navbar-brand" href="./landing_page.html"><img src="./Fotos/home.png" width="100" height="100"></a>
+        <a class="navbar-brand" href="./landing_page.html"><img src="./fotos/home.png" width="100" height="100"></a>
     </div>
 
     <!-- Aquí introduciremos nuestros 4 apartados -->
@@ -45,7 +45,7 @@
     </div>
 
     <div class = "container-fluid text-center" id = "cntEmail">
-      <img src="./Fotos/email_good.PNG" alt="" id = "email">
+      <img src="./fotos/email_good.PNG" alt="" id = "email">
     </div>
 
   </nav>
@@ -76,19 +76,19 @@
       <div class = "row">
         <div class = "col">
           <div class = "container" id = "contenedorFoto1">
-            <img src="./Fotos/HTML.png" alt="Foto de HTML" width="160px" height="160px" id = "foto1">
+            <img src="./fotos/HTML.png" alt="Foto de HTML" width="160px" height="160px" id = "foto1">
           </div>
         </div>
 
         <div class = "col">
           <div class = "container" id = "contenedorFoto2">
-            <img src="./Fotos/CSS.png" alt="Foto de CSS" width="120px" height="160px" id = "foto2">
+            <img src="./fotos/CSS.png" alt="Foto de CSS" width="120px" height="160px" id = "foto2">
           </div>
         </div>
 
         <div class = "col">
           <div class = "container" id = "contenedorFoto3">
-            <img src="./Fotos/bootstrap.png" alt="Foto de CSS" width="160px" height="125px" id = foto3>
+            <img src="./fotos/bootstrap.png" alt="Foto de CSS" width="160px" height="125px" id = foto3>
           </div>
         </div>
 
@@ -165,7 +165,7 @@
         </div>
 
         <div class = "col">
-          <img src="./Fotos/pensando.png" alt="Foto emoji pensando" width="270px" height="160px" id = "fotoPensando">
+          <img src="./fotos/pensando.png" alt="Foto emoji pensando" width="270px" height="160px" id = "fotoPensando">
         </div>
       </div>
 
