--- a/persuasion.html
+++ b/persuasion.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg" id = "miNavbar">
     <div class = "container-fluid" id = "home">
         <!-- La imagen con su correspndiente id -->
-        <a class="navbar-brand" href="./landing_page.html"><img src="./Fotos/home.png" width="100" height="100"></a>
+        <a class="navbar-brand" href="./landing_page.html"><img src="./fotos/home.png" width="100" height="100"></a>
     </div>
 
     <!-- Aquí introduciremos nuestros 4 apartados -->
@@ -45,7 +45,7 @@
     </div>
 
     <div class = "container-fluid text-center" id = "cntEmail">
-      <img src="./Fotos/email_good.PNG" alt="" id = "email">
+      <img src="./fotos/email_good.PNG" alt="" id = "email">
     </div>
 
   </nav>
