--- a/persuasion.html
+++ b/persuasion.html
@@ -75,7 +75,7 @@
       <div class = "col">
         <div class = "container">
 
-          <img src="./Fotos/Corcho.PNG" width="1300" height="700" alt="Foto de la infografía de la persuasión" id="foto">
+          <img src="./fotos/Corcho.PNG" width="1300" height="700" alt="Foto de la infografía de la persuasión" id="foto">
 
         </div>
       </div>
